2015-07-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph: Run "libtoolize --copy --force"
	for libtool 2.4.6.

2015-07-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/texi2any.pl: Import fewer modules by default, for speed.  
	(texi2any --help changed from about 0.4 s to about 0.1 s.).
	(%formats_table): Store name of required module in 'module' 
	values of hashes.
	* tp/Texinfo/Convert/XSParagraph/XSParagraph.pm: Add
	"require Texinfo::Convert::Paragraph" for fall-back code.
	* tp/Texinfo/Convert/Plaintext.pm,
	* tp/Texinfo/Convert/Info.pm: Use Texinfo/Convert/Paragraph.pm 
	indirectly via Texinfo/Convert/XSParagraph/XSParagraph.pm.

2015-07-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/XSParagraph.xs
	(xspara_new): Optional conf parameter.
	(xspara_add_next): Propagate 'transparent' argument.
	* tp/Texinfo/Convert/XSParagraph/xspara.c
	(xspara_add_next, xspara__add_next): Update state.last_letter, 
	taking into account 'transparent' argument.

	* tp/t/paragraph.t: Run tests for XSParagraph module as well as 
	Texinfo::Convert::XSParagraph.

2015-07-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/xspara.c: Remove all comments 
	with out-of-date line numbers for Paragraph.pm.

	* tp/Texinfo/Convert/Paragraph.pm
	(inhibit_end_sentence, remove_end_sentence): Rename.
	(add_end_sentence): New function, split from _add_next.

2015-07-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Paragraph.pm,
	* tp/Texinfo/Convert/Line.pm,
	* tp/Texinfo/Convert/UnFilled.pm,
	* tp/Texinfo/Convert/XSParagraph/XSParagraph.xs,
	* tp/Texinfo/Convert/XSParagraph/xspara.c (add_next): Remove an 
	unused parameter.

2015-07-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/Makefile.am: Clear CFLAGS.
	* tp/Texinfo/Convert/XSParagraph/XSParagraph.pm: Don't goto a 
	label inside an if (0) { ... } block.
