@@ -41,18 +41,7 @@ dist_modules_DATA = XSParagraph.pm
 
 EXTRA_DIST += fetch_conf.pl
 
-# TODO: Rules for installing
-
-# TODO: Figure out what Make variables we need
-
-#PERL_INC = /usr/lib/perl5/CORE
 PERL_INC = $(PERL_CONF_archlibexp)/CORE
-
-#PERL = /usr/bin/perl5.18.1
-
-# It's essential that we use the same compiler that was used to build
-# Perl.  Otherwise Perl's "config.h" will be incorrect.
-CC = $(PERL_CONF_cc)
 
 XSUBPPARGS = -typemap $(PERL_CONF_privlibexp)/ExtUtils/typemap
 
