@@ -1108,7 +1108,8 @@ my %converter_defaults;
 
 if (defined($formats_table{$format}->{'module'})) {
   # Speed up initialization by only loading the module we need.
-  eval "require $formats_table{$format}->{'module'};";
+  eval "require $formats_table{$format}->{'module'};"
+      or die "$@";
   eval '$formats_table{$format}->{\'converter\'} = sub{'.
                 $formats_table{$format}->{'module'}
         .'->converter(@_)};';
